Button mobile fix

--- a/checkoutchamp/cozy-sofa-bed.css
+++ b/checkoutchamp/cozy-sofa-bed.css
@@ -12996,3 +12996,9 @@ cust-info-input{
 	text-align:center;
   }
 }
+
+@media (max-width: 480px) {
+  #idpfbdl {
+      width: 190px;
+  }
+}
